2009-06-18  Alberto Garcia  <agarcia@igalia.com>

	* hildon/hildon-window-stack.c (_hildon_window_stack_do_push):
	Use the index of the previous window rather than the stack length
	to calculate the new index.

	Fixes: NB#122389

2009-06-18  Alejandro Pinheiro <apinheiro@igalia.com>

	* hildon/hildon-date-selector.c
	(hildon_date_selector_select_current_date)
	(hildon_date_selector_get_date)
	(hildon_date_selector_select_day):
	Update the documentation: uses always the range (1-31), as it is obvious
	that the final one will depend on the month and the year, but globally
	the range is this, in a similar GtkCalendar approach
	(hildon_date_selector_get_date):
	Update the documentation: add NULL as a valid value for the day, month
	and year locations

	Fix some details, after talk with David King on bug MB#4698

2009-06-18  Alejandro Pinheiro <apinheiro@igalia.com>

	* hildon/hildon-touch-selector-entry.c
	* hildon/hildon-touch-selector.c
	Update the documentation of the "text-column" property

2009-06-18  David King  <davidk@openismus.com>

	* hildon/hildon-note.c: Add Gtk-Doc markup where appropriate. Correct
	several typos and errors throughout the documentation.

	Fixes: MB#4701 (HildonNote documentation lacks some Gtk-Doc markup and
	has some mistakes)

2009-06-18  Alberto Garcia  <agarcia@igalia.com>

	* hildon/hildon-note.c (hildon_note_realize):
	Make HildonNote support portrait mode.

	Fixes: NB#123448 (HildonNote is not portrait-friendly)

2009-06-17  Alberto Garcia  <agarcia@igalia.com>

	* hildon/hildon-color-chooser.c (hildon_color_chooser_new):
	Document this function

2009-06-17  David King  <davidk@openismus.com>

	* hildon/hildon-date-selector.c
	(hildon_date_selector_select_current_date)
	(hildon_date_selector_get_date): Update documentation regarding days,
	as the day of the month is dependent on both the month and the year.
	(hildon_date_selector_get_date): Fix documentation of output arguments.
